--- a/.github/workflows/Arma.yml
+++ b/.github/workflows/Arma.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   validate:
-    runs-on: ubuntu
+    runs-on: ubuntu-latest
     steps:
     - name: Checkout the source code
       uses: actions/checkout@master
@@ -25,7 +25,7 @@ jobs:
       uses: arma-actions/bom-check@master
 
   lint:
-    runs-on: ubuntu
+    runs-on: ubuntu-latest
     steps:
     - name: Checkout the source code
       uses: actions/checkout@master
